# Playground

./: .gitignore  .gitmodules  README.md  stack.md
2411-app/: .gitignore  README.MD  package-lock.json  package.json
C/: for_str.c  func  func.c  function.c  ifelse.c  pointers.c  readme.md  size.c  str.c  switch.c  type  type.c  while.c
CSS/: 1.1_href.html
Html/: 01.html  02.html  03.html  04.html  05.html
Java/: build.gradle.kts
Js/: main.html
Kotlin/: test.kt
TypeScript/: README.md  helloworld.js  main.html
androlua_cache_lib/: cache.lua
androlua_yaml/: Yamlkit.lua
astroship/: .gitignore
c-playground/: README.MD  for_str.c  pointers.c  size.c
cpp/: Map.cpp  Search.cpp  UDG.cpp
cpp-train/: test_bf.cpp  test_kmp.c
css-desgin/: README.MD
flutter-demo/: pubspec.yaml
html-playground/: README.MD  base.html  nav-bar.html  tab.html
llm-train/: some.xml
nextjs-dashboard/: .gitignore
novelai_playground/: README.md  (+6 more)
python-playground/: .gitignore  exchange.py  goods_cli.py  login_scrape.py  login_test.py  p_11.py  p_12.py  p_13.py  p_14.py  p_3.py  p_4.py  p_5.py  p_6.py  pyproject.toml  pytest_login.py  selenium_2.py  selenium_3.py  selenium_4.py  selenium_report.py  selenium_ryjiaoyu.py
python-playground/Leetcode/: 14_longestCommonPrefix.py  799_champagneTower.py
python-playground/algorithm/: binomial_coefficient.py  calculate_fare.py  dfs.py  dijkstra.py  fibonacci_sequence.py  find_majority_element.py  min_physical_exertion.py
python-playground/python_ioread_example/: io_data_yaml.py
python-playground/python_logtool_lib/: mlog.py
(+455 files in other folders)
